config.properties added